--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Para ti, mi amor</title>
+    <title>Para mi hermana</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
@@ -110,11 +110,11 @@
 
     <script>
         const phrases = [
-            { text: "Te Amo", color: "#ff69b4" },
-            { text: "Eres preciosa", color: "#00ced1" },
-            { text: "My love", color: "#ffd700" },
-            { text: "Me encantas", color: "#98fb98" },
-            { text: "Amor de mi vida", color: "#ba55d3" }
+            { text: "¡Feliz cumpleaños!", color: "#ff69b4" },
+            { text: "Te quiero hermanita", color: "#00ced1" },
+            { text: "Eres increíble", color: "#ffd700" },
+            { text: "Estoy orgulloso", color: "#98fb98" },
+            { text: "Brillas como siempre", color: "#ba55d3" }
         ];
 
         const images = [
@@ -173,13 +173,13 @@
 
         // Texto principal
         const paragraphs = [
-            "Para ti, mi amor:",
-            "He estado pensando mucho en ti, y en todo lo que hemos compartido desde que nuestras vidas se cruzaron.",
-            "Recuerdo con tanta claridad el momento en que comencé a enamorarme de ti. Fue como si el mundo cambiara de color, como si cada cosa sencilla —una mirada, una risa tuya, tu forma de hablarme— cobrara sentido distinto. Desde entonces, llevas contigo una parte de mí.",
-            "A veces, entre tareas, proyectos y días que parecen no tener pausas, me doy cuenta de cuánto te extraño… no solo por lo que haces, sino por lo que eres. Me haces falta no solo cuando estás lejos, sino cuando yo mismo me alejo sin querer, atrapado en todo lo que tengo que hacer.",
-            "Sé que no he estado tan presente como quisiera, pero si algo no ha cambiado es lo que siento por ti. Aún guardo cada momento contigo como una especie de refugio al que vuelvo mentalmente cuando el día pesa más de lo normal.",
-            "Gracias por tu paciencia, por tu forma de quererme incluso en los días en que no lo demuestro como mereces.",
-            "Te pienso. Te valoro. Y te amo… más de lo que alcanzo a decir."
+            "Para ti, hermana mía:",
+            "Hoy el universo celebra porque un día como este llegaste para llenarlo de alegría, risas y un brillo que solo tú puedes otorgar (como abrir mis cotinas).",
+    "No importa cuántos años pasen, siempre serás esa persona especial que ilumina cada rincón de mi vida con su presencia.",
+    "Tu fuerza, tu bondad y esa chispa única que tienes me inspiran a ser mejor cada día.",
+    "Gracias por cada momento q compartimos, por las charlas interminables y por enseñarme lo que significa tener una hermana de verdad.",
+    "Hoy soplas velas, pero yo pido un deseo: que la vida te devuelva multiplicado todo lo bueno que siembras.",
+    "Te quiero con todo mi corazón, y me siento afortunado de caminar este mundo sabiendo que siempre cuento contigo y que tu eres mi hermana."
         ];
 
         const container = document.getElementById("textContainer");
