--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
     <script>
         const phrases = [
             { text: "¡Feliz cumpleaños!", color: "#ff69b4" },
-            { text: "Te quiero hermanita", color: "#00ced1" },
-            { text: "Eres increíble", color: "#ffd700" },
-            { text: "Estoy orgulloso", color: "#98fb98" },
-            { text: "Brillas como siempre", color: "#ba55d3" }
+            { text: "Juega rápido", color: "#00ced1" },
+            { text: "Págame", color: "#ffd700" },
+            { text: "Presta la moto", color: "#98fb98" },
+            { text: "Server?", color: "#ba55d3" }
         ];
 
         const images = [
@@ -173,13 +173,11 @@
 
         // Texto principal
         const paragraphs = [
-            "Para ti, hermana mía:",
-            "Hoy el universo celebra porque un día como este llegaste para llenarlo de alegría, risas y un brillo que solo tú puedes otorgar (como abrir mis cotinas).",
-    "No importa cuántos años pasen, siempre serás esa persona especial que ilumina cada rincón de mi vida con su presencia.",
-    "Tu fuerza, tu bondad y esa chispa única que tienes me inspiran a ser mejor cada día.",
-    "Gracias por cada momento q compartimos, por las charlas interminables y por enseñarme lo que significa tener una hermana de verdad.",
-    "Hoy soplas velas, pero yo pido un deseo: que la vida te devuelva multiplicado todo lo bueno que siembras.",
-    "Te quiero con todo mi corazón, y me siento afortunado de caminar este mundo sabiendo que siempre cuento contigo y que tu eres mi hermana."
+            "Para, el puerco que me debe 13 latas:",
+            "Hoy el universo se aguanta porque un día como este naciste tú, y desde entonces lo único que brillas es cuando conectas esa moto eléctrica que parece juguete de feria",
+    "A veces no apareces en BombSquad, pero cuando sí lo haces, hasta da gusto perder porque las risas valen más que el trofeo",
+    "Hoy soplas velas, yo pido que te conectes más seguido, que me pagues los 13 dólares, y que la vida te devuelva todo lo que das (menos la deuda, esa sí págala)",
+    "Cunado dejes de tragar me avisas para jugar.",
         ];
 
         const container = document.getElementById("textContainer");
