--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Léelo hasta el final asqueroso</title>
+    <title>Léelo hasta el final asquerosa</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
@@ -111,10 +111,10 @@
     <script>
         const phrases = [
             { text: "¡Feliz cumpleaños!", color: "#ff69b4" },
-            { text: "Juega rápido", color: "#00ced1" },
-            { text: "Págame", color: "#ffd700" },
-            { text: "Presta la moto", color: "#98fb98" },
-            { text: "Server?", color: "#ba55d3" }
+            { text: "¿Cuándo juegamos de nuevo?", color: "#00ced1" },
+            { text: "Si te regalan dinero invitame a comer", color: "#ffd700" },
+            { text: "Ya estas viejaa", color: "#98fb98" },
+            { text: "Sigue brillando", color: "#ba55d3" }
         ];
 
         const images = [
@@ -173,11 +173,12 @@
 
         // Texto principal
         const paragraphs = [
-            "Para, el puerco que me debe 13 latas:",
-            "Hoy el universo se aguanta porque un día como este naciste tú, y desde entonces lo único que brillas es cuando conectas esa moto eléctrica que parece juguete de feria",
-    "A veces no apareces en BombSquad, pero cuando sí lo haces, hasta da gusto perder porque las risas valen más que el trofeo",
-    "Hoy soplas velas, yo pido que te conectes más seguido, que me pagues los 13 dólares, y que la vida te devuelva todo lo que das (menos la deuda, esa sí págala)",
-    "Cunado dejes de tragar me avisas para jugar.",
+            "Para, Dulce María la del barrio:",
+            "Hoy soplas velas 🎂 y el universo hace como que celebra 🌌xd",
+    "Aunque ya no te conectes a jugar por la gata rompe hogares 🐱💥 y el miedo de perder kcho 🎮😱, te esperamos… o al menos hasta encontrar un digno reemplazo 🕵️‍♂️",
+    "Gracias por las risas 😂, por aguantar mis tonteras 🤪 y por hacer que la amistad sea más divertida con tus ocurrencias 🤯",
+    "Feliz cumple 🥳, disfruta, no tanto 😏, recuerda que es mejor afuera que adentro 👀 y pues nada, me guardas pastel 🍰 jaja.",
+    "Si llegaste hasta aquí, felicidadees gordo el que lo lea😜",
         ];
 
         const container = document.getElementById("textContainer");
