Update title and birthday messages in index.htmlppp

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Léelo hasta el final asquerosa</title>
+    <title>Osi</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 
@@ -111,10 +111,10 @@
     <script>
         const phrases = [
             { text: "¡Feliz cumpleaños!", color: "#ff69b4" },
-            { text: "¿Cuándo juegamos de nuevo?", color: "#00ced1" },
-            { text: "Si te regalan dinero invitame a comer", color: "#ffd700" },
-            { text: "Ya estas viejaa", color: "#98fb98" },
-            { text: "Sigue brillando", color: "#ba55d3" }
+            { text: "¿Cuándo me invitas a comer de nuevo?:D", color: "#00ced1" },
+            { text: "Te acuerdas del chste de poco yo???", color: "#ffd700" },
+            { text: "Esto no es un mensaje, es un te extraño mensa xD", color: "#98fb98" },
+            { text: "Te traje bytes de cariño en vez de flores 💻🌸", color: "#ba55d3" }
         ];
 
         const images = [
@@ -173,12 +173,15 @@
 
         // Texto principal
         const paragraphs = [
-            "Para, Dulce María la del barrio:",
-            "Hoy soplas velas 🎂 y el universo hace como que celebra 🌌xd",
-    "Aunque ya no te conectes a jugar por la gata rompe hogares 🐱💥 y el miedo de perder kcho 🎮😱, te esperamos… o al menos hasta encontrar un digno reemplazo 🕵️‍♂️",
-    "Gracias por las risas 😂, por aguantar mis tonteras 🤪 y por hacer que la amistad sea más divertida con tus ocurrencias 🤯",
-    "Feliz cumple 🥳, disfruta, no tanto 😏, recuerda que es mejor afuera que adentro 👀 y pues nada, me guardas pastel 🍰 jaja.",
-    "Si llegaste hasta aquí, felicidadees gordo el que lo lea😜",
+            "A su adorable excelencia, una amiga mía, Lic. Geovana🌟:",
+"Hola, recibí tu invitación, me dio algo de nostalgia y ya no sé cómo escribirte, pero todavía hay cosas que me sacan una sonrisa solo con pensarlas.",
+"No sé si fue por los chistes tontos o las historias sin sentido, pero contigo siempre era fácil reír; me hace pensar que 'no estaban tan mal los viejos tiempos'.",
+"A veces recuerdo cómo todo se volvía más ligero cuando hablabas, incluso cuando fingías que todo estaba bien 🌤️.",
+"Supongo que por eso este mensaje tenía que aparecer, aunque haya pasado tanto 🕰️.",
+"Fuiste parte de días que todavía se sienten cerca, aunque el tiempo diga lo contrario 💭.",
+"Y aunque ya no hablamos tanto, igual me alegra saber que sigues sonriendo como siempre, a pesar de lo que te aqueja día a día.",
+"Feliz cumpleaños, Geovana 🎂, solo se me ocurre desearte lo mejor (insertar buenos deseos) kcho.",
+"Eso es todo por ahora. Se siente extraño que seas solo un recuerdo; me alegró saber de ti de nuevo, y acepto la invitación, así que ahí estaré para celebrar una vez más.",
         ];
 
         const container = document.getElementById("textContainer");
